EXTRA_DIST = \
	BLC.xml \
	FCS-pitch.xml \
	FCS-roll.xml \
	FCS-yaw.xml \
	NWS.xml \
	catapult.xml \
	flaps.xml \
	gear.xml \
	holdback.xml \
	hook.xml \
	refuel.xml \
	speedbrakes.xml \
	sperry-a2-autopilot.xml \
	GNCUtilities.xml \
	Autopilot.xml \
	airship_added_mass.xml \
	airship-mooring.xml \
	tail_wheel_lock.xml \
	afcs.xml \
	fg_glue.xml \
	jsb_glue.xml \
	rpm_governor.xml \
	hydrodynamics.xml \
	visual-reference-point-extensions.xml
