SUBDIRS = direct_search

noinst_LIBRARIES = libMath.a

libMath_a_SOURCES = FGColumnVector3.cpp FGFunction.cpp FGLocation.cpp FGMatrix33.cpp \
                    FGPropertyValue.cpp FGQuaternion.cpp FGRealValue.cpp FGTable.cpp \
                    FGCondition.cpp

noinst_HEADERS = FGColumnVector3.h FGFunction.h FGLocation.h FGMatrix33.h \
                 FGParameter.h FGPropertyValue.h FGQuaternion.h FGRealValue.h FGTable.h \
                 FGCondition.h

INCLUDES = -I$(top_srcdir)/src -I../
